@@ -1,73 +1,88 @@
 plugins {
 	id "java-library"
-	id "org.jetbrains.kotlin.jvm"
 	id "org.springframework.boot.auto-configuration"
-	id "org.springframework.boot.conventions"
+	id "org.springframework.boot.configuration-properties"
 	id "org.springframework.boot.deployed"
+	id "org.springframework.boot.docker-test"
 	id "org.springframework.boot.optional-dependencies"
 }
 
 description = "Spring Boot AutoConfigure"
 
+configurations.all {
+	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+		if (details.requested.module.group == "org.apache.kafka" && details.requested.module.name == "kafka-server-common") {
+			details.artifactSelection {
+				selectArtifact(DependencyArtifact.DEFAULT_TYPE, null, null)
+			}
+		}
+	}
+}
+
 dependencies {
 	api(project(":spring-boot-project:spring-boot"))
 
-	optional("com.atomikos:transactions-jdbc")
-	optional("com.atomikos:transactions-jta")
+	dockerTestImplementation(project(":spring-boot-project:spring-boot-test"))
+	dockerTestImplementation(project(":spring-boot-project:spring-boot-tools:spring-boot-test-support-docker"))
+	dockerTestImplementation("com.redis:testcontainers-redis")
+	dockerTestImplementation("org.assertj:assertj-core")
+	dockerTestImplementation("org.awaitility:awaitility")
+	dockerTestImplementation("org.junit.jupiter:junit-jupiter")
+	dockerTestImplementation("org.mockito:mockito-core")
+	dockerTestImplementation("org.springframework:spring-test")
+	dockerTestImplementation("org.testcontainers:cassandra")
+	dockerTestImplementation("org.testcontainers:couchbase")
+	dockerTestImplementation("org.testcontainers:elasticsearch")
+	dockerTestImplementation("org.testcontainers:junit-jupiter")
+	dockerTestImplementation("org.testcontainers:mongodb")
+	dockerTestImplementation("org.testcontainers:neo4j")
+	dockerTestImplementation("org.testcontainers:pulsar")
+	dockerTestImplementation("org.testcontainers:testcontainers")
+
+	optional("co.elastic.clients:elasticsearch-java") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
 	optional("com.fasterxml.jackson.core:jackson-databind")
 	optional("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor")
 	optional("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
 	optional("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+	optional("com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations")
 	optional("com.fasterxml.jackson.module:jackson-module-parameter-names")
 	optional("com.google.code.gson:gson")
 	optional("com.hazelcast:hazelcast")
 	optional("com.hazelcast:hazelcast-spring")
 	optional("com.h2database:h2")
 	optional("com.nimbusds:oauth2-oidc-sdk")
-	optional("com.oracle.database.jdbc:ojdbc8")
-	optional("com.oracle.database.jdbc:ucp")
+	optional("com.oracle.database.jdbc:ojdbc11")
+	optional("com.oracle.database.jdbc:ucp11")
+	optional("com.querydsl:querydsl-core")
 	optional("com.samskivert:jmustache")
-	optional("com.sun.mail:jakarta.mail")
-	optional("de.flapdoodle.embed:de.flapdoodle.embed.mongo")
 	optional("io.lettuce:lettuce-core")
 	optional("io.projectreactor.netty:reactor-netty-http")
 	optional("io.r2dbc:r2dbc-spi")
 	optional("io.r2dbc:r2dbc-pool")
+	optional("io.r2dbc:r2dbc-proxy")
 	optional("io.rsocket:rsocket-core")
 	optional("io.rsocket:rsocket-transport-netty")
-	optional("io.undertow:undertow-servlet") {
-		exclude group: "org.jboss.spec.javax.annotation", module: "jboss-annotations-api_1.3_spec"
-		exclude group: "org.jboss.spec.javax.servlet", module: "jboss-servlet-api_4.0_spec"
-	}
-	optional("io.undertow:undertow-websockets-jsr") {
-		exclude group: "org.jboss.spec.javax.annotation", module: "jboss-annotations-api_1.3_spec"
-		exclude group: "org.jboss.spec.javax.servlet", module: "jboss-servlet-api_4.0_spec"
-		exclude group: "org.jboss.spec.javax.websocket", module: "jboss-websocket-api_1.1_spec"
-	}
+	optional("io.undertow:undertow-servlet")
+	optional("io.undertow:undertow-websockets-jsr")
 	optional("jakarta.jms:jakarta.jms-api")
 	optional("jakarta.mail:jakarta.mail-api")
 	optional("jakarta.json.bind:jakarta.json.bind-api")
 	optional("jakarta.persistence:jakarta.persistence-api")
 	optional("jakarta.transaction:jakarta.transaction-api")
 	optional("jakarta.validation:jakarta.validation-api")
+	optional("jakarta.websocket:jakarta.websocket-api")
 	optional("jakarta.ws.rs:jakarta.ws.rs-api")
 	optional("javax.cache:cache-api")
 	optional("javax.money:money-api")
-	optional("net.sf.ehcache:ehcache")
-	optional("org.apache.activemq:activemq-broker") {
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-j2ee-management_1.1_spec"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-jms_1.1_spec"
-	}
-	optional("org.apache.activemq:artemis-jms-client") {
+	optional("org.apache.activemq:activemq-broker")
+	optional("org.apache.activemq:activemq-client")
+	optional("org.apache.activemq:artemis-jakarta-client") {
 		exclude group: "commons-logging", module: "commons-logging"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-jms_2.0_spec"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-json_1.0_spec"
 	}
-	optional("org.apache.activemq:artemis-jms-server") {
+	optional("org.apache.activemq:artemis-jakarta-server") {
 		exclude group: "commons-logging", module: "commons-logging"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-jms_2.0_spec"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-json_1.0_spec"
-		exclude group: "org.apache.geronimo.specs", module: "geronimo-jta_1.1_spec"
 	}
 	optional("org.apache.commons:commons-dbcp2") {
 		exclude group: "commons-logging", module: "commons-logging"
@@ -75,15 +90,13 @@ dependencies {
 	optional("org.apache.httpcomponents.client5:httpclient5")
 	optional("org.apache.httpcomponents.core5:httpcore5-reactive")
 	optional("org.apache.kafka:kafka-streams")
-	optional("org.apache.solr:solr-solrj") {
-		exclude group: "org.slf4j", module: "jcl-over-slf4j"
-	}
 	optional("org.apache.tomcat.embed:tomcat-embed-core")
 	optional("org.apache.tomcat.embed:tomcat-embed-el")
 	optional("org.apache.tomcat.embed:tomcat-embed-websocket")
 	optional("org.apache.tomcat:tomcat-jdbc")
 	optional("org.apiguardian:apiguardian-api")
-	optional("org.codehaus.groovy:groovy-templates")
+	optional("org.apache.groovy:groovy-templates")
+	optional("org.eclipse.angus:angus-mail")
 	optional("com.github.ben-manes.caffeine:caffeine")
 	optional("com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute")
 	optional("com.sendgrid:sendgrid-java") {
@@ -94,55 +107,39 @@ dependencies {
 	optional("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
 	optional("org.aspectj:aspectjweaver")
 	optional("org.cache2k:cache2k-spring")
-	optional("org.eclipse.jetty:jetty-webapp") {
-		exclude group: "javax.servlet", module: "javax.servlet-api"
-	}
+	optional("org.eclipse.jetty.ee10:jetty-ee10-webapp")
 	optional("org.eclipse.jetty:jetty-reactive-httpclient")
-	optional("org.eclipse.jetty.websocket:javax-websocket-server-impl") {	
-		exclude group: "javax.annotation", module: "javax.annotation-api"
-		exclude group: "javax.servlet", module: "javax.servlet-api"
-		exclude group: "javax.websocket", module: "javax.websocket-api"
-		exclude group: "javax.websocket", module: "javax.websocket-client-api"
-		exclude group: "org.eclipse.jetty", module: "jetty-jndi"
+	optional("org.eclipse.jetty.ee10.websocket:jetty-ee10-websocket-jakarta-server")
+	optional("org.eclipse.jetty.ee10.websocket:jetty-ee10-websocket-jetty-server")
+	optional("org.ehcache:ehcache") {
+		artifact {
+			classifier = 'jakarta'
+		}
 	}
-	optional("org.ehcache:ehcache")
 	optional("org.elasticsearch.client:elasticsearch-rest-client") {
 		exclude group: "commons-logging", module: "commons-logging"
 	}
 	optional("org.elasticsearch.client:elasticsearch-rest-client-sniffer") {
 		exclude group: "commons-logging", module: "commons-logging"
 	}
-	optional("org.elasticsearch.client:elasticsearch-rest-high-level-client") {
-		exclude group: "commons-logging", module: "commons-logging"
-	}
 	optional("org.flywaydb:flyway-core")
+	optional("org.flywaydb:flyway-database-postgresql")
+	optional("org.flywaydb:flyway-database-oracle")
 	optional("org.flywaydb:flyway-sqlserver")
 	optional("org.freemarker:freemarker")
-	optional("org.glassfish.jersey.core:jersey-server")
 	optional("org.glassfish.jersey.containers:jersey-container-servlet-core")
 	optional("org.glassfish.jersey.containers:jersey-container-servlet")
-	optional("org.glassfish.jersey.ext:jersey-spring5")
+	optional("org.glassfish.jersey.core:jersey-server")
+	optional("org.glassfish.jersey.ext:jersey-spring6")
 	optional("org.glassfish.jersey.media:jersey-media-json-jackson")
-	optional("org.hibernate:hibernate-core") {
-		exclude group: "javax.activation", module: "javax.activation-api"
-		exclude group: "javax.persistence", module: "javax.persistence-api"
-		exclude group: "javax.xml.bind", module: "jaxb-api"
-		exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
-	}
-	optional("org.hibernate:hibernate-jcache") {
-		exclude group: "javax.activation", module: "javax.activation-api"
-		exclude group: "javax.persistence", module: "javax.persistence-api"
-		exclude group: "javax.xml.bind", module: "jaxb-api"
-		exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
-	}
+	optional("org.hibernate.orm:hibernate-core")
+	optional("org.hibernate.orm:hibernate-jcache")
 	optional("org.hibernate.validator:hibernate-validator")
+	optional("org.infinispan:infinispan-commons")
 	optional("org.infinispan:infinispan-component-annotations")
-	optional("org.infinispan:infinispan-jcache") {
-		exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
-	}
-	optional("org.infinispan:infinispan-spring5-embedded") {
-		exclude group: "org.jboss.spec.javax.transaction", module: "jboss-transaction-api_1.2_spec"
-	}
+	optional("org.infinispan:infinispan-core")
+	optional("org.infinispan:infinispan-jcache")
+	optional("org.infinispan:infinispan-spring6-embedded")
 	optional("org.influxdb:influxdb-java")
 	optional("org.jooq:jooq") {
 		exclude group: "javax.xml.bind", module: "jaxb-api"
@@ -155,6 +152,9 @@ dependencies {
 	}
 	optional("org.mongodb:mongodb-driver-reactivestreams")
 	optional("org.mongodb:mongodb-driver-sync")
+	optional("org.opensaml:opensaml-core:4.0.1")
+	optional("org.opensaml:opensaml-saml-api:4.0.1")
+	optional("org.opensaml:opensaml-saml-impl:4.0.1")
 	optional("org.quartz-scheduler:quartz")
 	optional("org.springframework.integration:spring-integration-core")
 	optional("org.springframework.integration:spring-integration-jdbc")
@@ -170,10 +170,7 @@ dependencies {
 	optional("org.springframework:spring-webflux")
 	optional("org.springframework:spring-webmvc")
 	optional("org.springframework.batch:spring-batch-core")
-	optional("org.springframework.data:spring-data-couchbase") {
-		exclude group: "com.querydsl", module: "querydsl-apt"
-		exclude group: "javax.annotation", module: "javax.annotation-api"
-	}
+	optional("org.springframework.data:spring-data-couchbase")
 	optional("org.springframework.data:spring-data-envers") {
 		exclude group: "javax.activation", module: "javax.activation-api"
 		exclude group: "javax.persistence", module: "javax.persistence-api"
@@ -196,76 +193,85 @@ dependencies {
 	optional("org.springframework.data:spring-data-redis")
 	optional("org.springframework.graphql:spring-graphql")
 	optional("org.springframework.hateoas:spring-hateoas")
+	optional("org.springframework.pulsar:spring-pulsar")
+	optional("org.springframework.pulsar:spring-pulsar-reactive")
 	optional("org.springframework.security:spring-security-acl")
 	optional("org.springframework.security:spring-security-config")
 	optional("org.springframework.security:spring-security-data") {
 		exclude group: "javax.xml.bind", module: "jaxb-api"
 	}
 	optional("org.springframework.security:spring-security-messaging")
+	optional("org.springframework.security:spring-security-oauth2-authorization-server")
 	optional("org.springframework.security:spring-security-oauth2-client")
 	optional("org.springframework.security:spring-security-oauth2-jose")
 	optional("org.springframework.security:spring-security-oauth2-resource-server")
 	optional("org.springframework.security:spring-security-rsocket")
-	optional("org.springframework.security:spring-security-saml2-service-provider")
+	optional("org.springframework.security:spring-security-saml2-service-provider") {
+		exclude group: "org.opensaml", module: "opensaml-core"
+		exclude group: "org.opensaml", module: "opensaml-saml-api"
+		exclude group: "org.opensaml", module: "opensaml-saml-impl"
+	}
 	optional("org.springframework.security:spring-security-web")
 	optional("org.springframework.session:spring-session-core")
 	optional("org.springframework.session:spring-session-data-mongodb")
 	optional("org.springframework.session:spring-session-data-redis")
-	optional("org.springframework.session:spring-session-hazelcast") {
-		exclude group: "javax.annotation", module: "javax.annotation-api"
-	} 
+	optional("org.springframework.session:spring-session-hazelcast")
 	optional("org.springframework.session:spring-session-jdbc")
 	optional("org.springframework.amqp:spring-rabbit")
 	optional("org.springframework.amqp:spring-rabbit-stream")
 	optional("org.springframework.kafka:spring-kafka")
-	optional("org.springframework.ws:spring-ws-core")
+	optional("org.springframework.ws:spring-ws-core") {
+		exclude group: "com.sun.mail", module: "jakarta.mail"
+		exclude group: "jakarta.platform", module: "jakarta.jakartaee-api"
+		exclude group: "org.eclipse.jetty", module: "jetty-server"
+		exclude group: "org.eclipse.jetty", module: "jetty-servlet"
+		exclude group: "jakarta.mail", module: "jakarta.mail-api"
+	}
 	optional("org.thymeleaf:thymeleaf")
-	optional("org.thymeleaf:thymeleaf-spring5")
-	optional("org.thymeleaf.extras:thymeleaf-extras-java8time")
-	optional("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
+	optional("org.thymeleaf:thymeleaf-spring6")
+	optional("org.thymeleaf.extras:thymeleaf-extras-springsecurity6")
 	optional("redis.clients:jedis")
 
 	testImplementation(project(":spring-boot-project:spring-boot-tools:spring-boot-test-support"))
 	testImplementation(project(":spring-boot-project:spring-boot-test"))
 	testImplementation("ch.qos.logback:logback-classic")
 	testImplementation("commons-fileupload:commons-fileupload")
-	testImplementation("com.atomikos:transactions-jms")
 	testImplementation("com.github.h-thurow:simple-jndi")
 	testImplementation("com.ibm.db2:jcc")
 	testImplementation("com.jayway.jsonpath:json-path")
 	testImplementation("com.mysql:mysql-connector-j")
-	testImplementation("com.querydsl:querydsl-core")
 	testImplementation("com.squareup.okhttp3:mockwebserver")
 	testImplementation("com.sun.xml.messaging.saaj:saaj-impl")
+	testImplementation("io.micrometer:context-propagation")
 	testImplementation("io.projectreactor:reactor-test")
 	testImplementation("io.r2dbc:r2dbc-h2")
 	testImplementation("jakarta.json:jakarta.json-api")
 	testImplementation("jakarta.xml.ws:jakarta.xml.ws-api")
-	testImplementation("org.apache.johnzon:johnzon-jsonb")
 	testImplementation("org.apache.logging.log4j:log4j-to-slf4j")
 	testImplementation("org.apache.tomcat.embed:tomcat-embed-jasper")
 	testImplementation("org.assertj:assertj-core")
 	testImplementation("org.awaitility:awaitility")
+	testImplementation("org.eclipse:yasson")
 	testImplementation("org.hsqldb:hsqldb")
 	testImplementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	testImplementation("org.junit.jupiter:junit-jupiter")
 	testImplementation("org.mockito:mockito-core")
 	testImplementation("org.mockito:mockito-junit-jupiter")
+	testImplementation("org.postgresql:postgresql")
+	testImplementation("org.postgresql:r2dbc-postgresql")
 	testImplementation("org.skyscreamer:jsonassert")
 	testImplementation("org.springframework:spring-test")
+	testImplementation("org.springframework:spring-core-test")
 	testImplementation("org.springframework.graphql:spring-graphql-test")
-	testImplementation("org.springframework.kafka:spring-kafka-test")
+	testImplementation("org.springframework.kafka:spring-kafka-test") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
+	testImplementation("org.springframework.pulsar:spring-pulsar-cache-provider-caffeine")
 	testImplementation("org.springframework.security:spring-security-test")
-	testImplementation("org.testcontainers:cassandra")
-	testImplementation("org.testcontainers:couchbase")
-	testImplementation("org.testcontainers:elasticsearch")
-	testImplementation("org.testcontainers:junit-jupiter")
-	testImplementation("org.testcontainers:mongodb")
-	testImplementation("org.testcontainers:neo4j")
-	testImplementation("org.testcontainers:testcontainers")
 	testImplementation("org.yaml:snakeyaml")
 
 	testRuntimeOnly("jakarta.management.j2ee:jakarta.management.j2ee-api")
+	testRuntimeOnly("org.flywaydb:flyway-database-hsqldb")
 	testRuntimeOnly("org.jetbrains.kotlin:kotlin-reflect")
 }
 
@@ -277,4 +283,8 @@ tasks.named("checkSpringConfigurationMetadata").configure {
 		"spring.datasource.tomcat.*",
 		"spring.groovy.template.configuration.*"
 	]
+}
+
+test {
+	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
 }
